@@ -575,6 +575,40 @@ expr_stmt|;
 block|}
 annotation|@
 name|Override
+DECL|method|close
+specifier|public
+name|void
+name|close
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+try|try
+block|{
+name|super
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|str
+operator|.
+name|setLength
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+name|str
+operator|.
+name|trimToSize
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Override
 DECL|method|reset
 specifier|public
 name|void
@@ -590,8 +624,6 @@ argument_list|()
 expr_stmt|;
 name|fillBuffer
 argument_list|(
-name|str
-argument_list|,
 name|input
 argument_list|)
 expr_stmt|;
@@ -626,9 +658,6 @@ specifier|private
 name|void
 name|fillBuffer
 parameter_list|(
-name|StringBuilder
-name|sb
-parameter_list|,
 name|Reader
 name|input
 parameter_list|)
@@ -638,7 +667,7 @@ block|{
 name|int
 name|len
 decl_stmt|;
-name|sb
+name|str
 operator|.
 name|setLength
 argument_list|(
@@ -661,7 +690,7 @@ operator|>
 literal|0
 condition|)
 block|{
-name|sb
+name|str
 operator|.
 name|append
 argument_list|(
