@@ -877,6 +877,194 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+comment|// LUCENE-6814
+DECL|method|testHeapFreedAfterClose
+specifier|public
+name|void
+name|testHeapFreedAfterClose
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// TODO: can we move this to BaseTSTC to catch other "hangs onto heap"ers?
+comment|// Build a 1MB string:
+name|StringBuilder
+name|b
+init|=
+operator|new
+name|StringBuilder
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|1024
+condition|;
+name|i
+operator|++
+control|)
+block|{
+comment|// 1023 spaces, then an x
+for|for
+control|(
+name|int
+name|j
+init|=
+literal|0
+init|;
+name|j
+operator|<
+literal|1023
+condition|;
+name|j
+operator|++
+control|)
+block|{
+name|b
+operator|.
+name|append
+argument_list|(
+literal|' '
+argument_list|)
+expr_stmt|;
+block|}
+name|b
+operator|.
+name|append
+argument_list|(
+literal|'x'
+argument_list|)
+expr_stmt|;
+block|}
+name|String
+name|big
+init|=
+name|b
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+name|Pattern
+name|x
+init|=
+name|Pattern
+operator|.
+name|compile
+argument_list|(
+literal|"x"
+argument_list|)
+decl_stmt|;
+name|List
+argument_list|<
+name|Tokenizer
+argument_list|>
+name|tokenizers
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|512
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Tokenizer
+name|stream
+init|=
+operator|new
+name|PatternTokenizer
+argument_list|(
+name|x
+argument_list|,
+operator|-
+literal|1
+argument_list|)
+decl_stmt|;
+name|tokenizers
+operator|.
+name|add
+argument_list|(
+name|stream
+argument_list|)
+expr_stmt|;
+name|stream
+operator|.
+name|setReader
+argument_list|(
+operator|new
+name|StringReader
+argument_list|(
+name|big
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|stream
+operator|.
+name|reset
+argument_list|()
+expr_stmt|;
+for|for
+control|(
+name|int
+name|j
+init|=
+literal|0
+init|;
+name|j
+operator|<
+literal|1024
+condition|;
+name|j
+operator|++
+control|)
+block|{
+name|assertTrue
+argument_list|(
+name|stream
+operator|.
+name|incrementToken
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|assertFalse
+argument_list|(
+name|stream
+operator|.
+name|incrementToken
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|stream
+operator|.
+name|end
+argument_list|()
+expr_stmt|;
+name|stream
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 end_class
 
